@@ -1,9 +1,9 @@
 CGEN - a Cpu tools GENerator
-Copyright 2000 Red Hat, Inc.
+Copyright 2000, 2007 Red Hat, Inc.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2, or (at your option)
+the Free Software Foundation; either version 3, or (at your option)
 any later version.
 
 This program is distributed in the hope that it will be useful, but
@@ -13,8 +13,8 @@ General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this software; see the file COPYING.  If not, write to the
-Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
-02110-1301 USA
+Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+Boston, MA 02110-1301 USA
 
 As a special exception, Red Hat gives unlimited permission to copy,
 distribute and modify the code that is the output of CGEN.  You need
