@@ -1,6 +1,6 @@
 /* IQ2000 opcode support.  -*- C -*-
 
-   Copyright 2000, 2001, 2002, 2005 Free Software Foundation, Inc.
+   Copyright 2000, 2001, 2002, 2005, 2007 Free Software Foundation, Inc.
 
    Contributed by Red Hat Inc; developed under contract from Fujitsu.
 
@@ -8,7 +8,7 @@
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2 of the License, or
+   the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.
 
    This program is distributed in the hope that it will be useful,
