@@ -1,6 +1,6 @@
 /* SHmedia opcode support.  -*- C -*-
 
-   Copyright 2000, 2005 Free Software Foundation, Inc.
+   Copyright 2000, 2005, 2007 Free Software Foundation, Inc.
 
    Contributed by Red Hat Inc; developed under contract from Hitachi
    Semiconductor (America) Inc.
@@ -9,7 +9,7 @@
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2 of the License, or
+   the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.
 
    This program is distributed in the hope that it will be useful,
@@ -21,6 +21,7 @@
    along with this program; if not, write to the Free Software
    Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston,
    MA 02110-1301, USA.  */
+
 
 /* This file is an addendum to sh-media.cpu.  Heavy use of C code isn't
    appropriate in .cpu files, so it resides here.  This especially applies
