@@ -1,6 +1,6 @@
 ; Collection of macros, for GNU Binutils .cpu files. -*- Scheme -*-
 ;
-; Copyright 2000 Free Software Foundation, Inc.
+; Copyright 2000, 2007 Free Software Foundation, Inc.
 ;
 ; Contributed by Red Hat Inc.
 ;
@@ -8,7 +8,7 @@
 ;
 ; This program is free software; you can redistribute it and/or modify
 ; it under the terms of the GNU General Public License as published by
-; the Free Software Foundation; either version 2 of the License, or
+; the Free Software Foundation; either version 3 of the License, or
 ; (at your option) any later version.
 ;
 ; This program is distributed in the hope that it will be useful,
@@ -18,7 +18,8 @@
 ;
 ; You should have received a copy of the GNU General Public License
 ; along with this program; if not, write to the Free Software
-; Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
+; Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston,
+; MA 02110-1301, USA.
 
 ; Enums.
 
