@@ -1,6 +1,6 @@
 ; Infineon XC16X CPU description.  -*- Scheme -*-
 ;
-; Copyright 2006 Free Software Foundation, Inc.
+; Copyright 2006, 2007 Free Software Foundation, Inc.
 ;
 ; Contributed by KPIT Cummins Infosystems Ltd.; developed under contract 
 ; from Infineon Systems, GMBH , Germany.
@@ -9,7 +9,7 @@
 ;
 ; This program is free software; you can redistribute it and/or modify
 ; it under the terms of the GNU General Public License as published by
-; the Free Software Foundation; either version 2 of the License, or
+; the Free Software Foundation; either version 3 of the License, or
 ; (at your option) any later version.
 ;
 ; This program is distributed in the hope that it will be useful,
