@@ -1,3 +1,8 @@
+2007-07-05  Nick Clifton  <nickc@redhat.com>
+
+	* utils.scm (copyright-fsf): Update copyright notice to refer to
+	the GPL version 3.
+
 2007-05-22  Nick Clifton  <nickc@redhat.com>
 
 	* doc/cgen.texi: Use @copying around the copyright notice.
